changed test train

--- a/CILinear.ipynb
+++ b/CILinear.ipynb
@@ -60,26 +60,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['v0']"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data['treatment_name']"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [],
@@ -269,10 +249,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask = np.random.rand(len(df)) < 0.8\n",
+    "train = df[mask]\n",
+    "test = df[~mask]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## I copied the graph string and created on my own lets change it "
+    "## I copied the graph string and created on my own lets change it to one they do"
    ]
   },
   {
@@ -304,38 +295,6 @@
    "outputs": [],
    "source": [
     "graph += 'node[id \"Unobserved Confounders\" label \"Unobserved Confounders\"] '"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['age',\n",
-       " 'sex',\n",
-       " 'cp',\n",
-       " 'trestbps',\n",
-       " 'chol',\n",
-       " 'fbs',\n",
-       " 'restecg',\n",
-       " 'thalach',\n",
-       " 'exang',\n",
-       " 'oldpeak',\n",
-       " 'slope',\n",
-       " 'ca',\n",
-       " 'thal']"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "columns"
    ]
   },
   {
@@ -389,10 +348,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# this is the graph string format that they used in\n",
     "graph=\"\"\"graph[directed 1 node[id \"Z\" label \"Z\"]\n",
     "                    node[id \"X\" label \"X\"]\n",
     "                    node[id \"Y\" label \"Y\"]\n",
@@ -403,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +382,7 @@
     }
    ],
    "source": [
-    "model = CausalModel(data=df,\n",
+    "model = CausalModel(data=train,\n",
     "                   treatment=['sex'],\n",
     "                   outcome=['target'],\n",
     "                    graph=graphn\n",
@@ -424,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +446,79 @@
     }
    ],
    "source": [
+    "# I clicked on no bu I put the unobserved confounders to the nodes in graph dont know why\n",
     "identified_estimand = model.identify_effect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:dowhy.causal_estimator:INFO: Using Linear Regression Estimator\n",
+      "INFO:dowhy.causal_estimator:b: target~sex+sex*thal+sex*cp+sex*thalach+sex*chol+sex*age+sex*fbs+sex*exang+sex*restecg+sex*ca+sex*oldpeak+sex*trestbps+sex*slope\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*** Causal Estimate ***\n",
+      "\n",
+      "## Target estimand\n",
+      "Estimand type: nonparametric-ate\n",
+      "### Estimand : 1\n",
+      "Estimand name: backdoor\n",
+      "Estimand expression:\n",
+      "  d                        \n",
+      "──────(Expectation(target))\n",
+      "d[sex]                     \n",
+      "Estimand assumption 1, Unconfoundedness: If U→{sex} and U→target then P(target|sex,,U) = P(target|sex,)\n",
+      "### Estimand : 2\n",
+      "Estimand name: iv\n",
+      "No such variable found!\n",
+      "\n",
+      "## Realized estimand\n",
+      "b: target~sex+sex*thal+sex*cp+sex*thalach+sex*chol+sex*age+sex*fbs+sex*exang+sex*restecg+sex*ca+sex*oldpeak+sex*trestbps+sex*slope\n",
+      "## Estimate\n",
+      "Value: -0.10860570020191451\n",
+      "\n",
+      "## Statistical Significance\n",
+      "p-value: 0.436\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "estimate = model.estimate_effect(identified_estimand, method_name='backdoor.linear_regression',\n",
+    "                                test_significance=True)\n",
+    "print(estimate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Causal Estimate is -0.10860570020191451\n",
+      "ATE -0.46375519904931667\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Causal Estimate is \" + str(estimate.value))\n",
+    "data_1 = df[df[\"exang\"]==1]\n",
+    "data_0 = df[df[\"exang\"]==0]\n",
+    "\n",
+    "print(\"ATE\", np.mean(data_1[\"target\"])- np.mean(data_0[\"target\"]))"
    ]
   },
   {
