--- a/CILinear.ipynb
+++ b/CILinear.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
        "4   0     2       1  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "(303, 14)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,17 +231,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 154,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "list.remove(x): x not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-154-346f23fd569d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mcolumns\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mcolumns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'fbs'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'target'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m: list.remove(x): x not in list"
+     ]
+    }
+   ],
    "source": [
     "columns = list(df.columns)\n",
-    "columns.remove(['sex','target'])"
+    "columns.remove(['fbs','target'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -259,10 +271,11 @@
        " 'oldpeak',\n",
        " 'slope',\n",
        " 'ca',\n",
-       " 'thal']"
+       " 'thal',\n",
+       " 'target']"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -471,36 +484,33 @@
       "## Realized estimand\n",
       "b: target~sex+thal+cp+thalach+chol+age+fbs+exang+restecg+ca+oldpeak+trestbps+slope\n",
       "## Estimate\n",
-      "Value: -0.17321283292079898\n",
-      "\n",
-      "## Statistical Significance\n",
-      "p-value: 0.014\n",
+      "Value: -0.06956521739130433\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "estimate = model.estimate_effect(identified_estimand, method_name='backdoor.linear_regression',\n",
+    "estimate_lin = model.estimate_effect(identified_estimand, method_name='backdoor.linear_regression',\n",
     "                                test_significance=True)\n",
     "print(estimate)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Causal Estimate is -0.10860570020191451\n",
+      "Causal Estimate is -0.17321283292079898\n",
       "ATE -0.46375519904931667\n"
      ]
     }
    ],
    "source": [
-    "print(\"Causal Estimate is \" + str(estimate.value))\n",
+    "print(\"Causal Estimate is \" + str(estimate_lin.value))\n",
     "data_1 = df[df[\"exang\"]==1]\n",
     "data_0 = df[df[\"exang\"]==0]\n",
     "\n",
@@ -546,13 +556,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -591,6 +594,38 @@
     "refute_results = model.refute_estimate(identified_estimand, estimate, \n",
     "                                      method_name='random_common_cause')\n",
     "print(refute_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:dowhy.causal_estimator:INFO: Using Linear Regression Estimator\n",
+      "INFO:dowhy.causal_estimator:b: target~placebo+thal+cp+thalach+chol+age+fbs+exang+restecg+ca+oldpeak+trestbps+slope\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Refute: Use a Placebo Treatment\n",
+      "Estimated effect:(-0.17321283292079898,)\n",
+      "New effect:(-0.02252418043817561,)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# placebo for linearestimand\n",
+    "refute_results = model.refute_estimate(identified_estimand, estimate_lin, \n",
+    "                                      method_name='placebo_treatment_refuter',\n",
+    "                                      placebo_type='permute')\n",
+    "print(refute_results)\n"
    ]
   },
   {
